# ml-experiments

./: .gitignore  .gitmodules  README.md  download.sh  requirements-torch-amd.txt  requirements-torch-nvidia.txt  requirements.txt
add-transformer/: README.md
add-transformer/pytorch/: dataset.py  inspect_attn.py  inspect_pos.py  inspect_roles.py  inspect_tok.py  inspect_value.py  main.py  task.md  train_attn_timelapse.py  train_timelapse.py
add-transformer/tiny/: dataset.py  main.py
add-transformer/tinygrad/: task.md
asteroids/: README.md  asteroids.py  requirements.txt  scaled_q.py  test_asteroids.py  test_scaled_q.py
cuda-llama3/: CMakeLists.txt  README.md
cuda-llama3/docs/: index.html  kernels.md
cuda-llama3/scripts/: benchmark.py  run_prompt.py
cuda-llama3/src/: cuda_llama.cu  main.cpp
hip-llama3/: CMakeLists.txt  README.md
hip-llama3/docs/: kernels.md
hip-llama3/docs/visualization/: README.md  index.html
hip-llama3/scripts/: export_llama.py  run_prompt.py
hip-llama3/src/: hip_llama.hip  main.cpp
llama3-tinygrad/: README.md  kernel_list.md  main.py  tinygrad_bug.md
llama3-tinygrad/corpus/decode/: README.txt  manifest.txt  raw_graph.txt
llama3-tinygrad/corpus/decode/kernels/: 000_embedding_partial.txt  001_embedding_finish.txt  (+229 more)
llama3-tinygrad/tools/: generate_uop_corpus.py
rectified-flow/: README.md
rectified-flow/pytorch/: torch_cifar_rf.py  torch_same_model.py
rectified-flow/tinygrad/: main.py
sort-transformer/: README.md
sort-transformer/tiny/: task.md
sort-transformer/tinygrad/: dataset.py  main.py
